--- a/src/components/FriendCard/FriendCard.css
+++ b/src/components/FriendCard/FriendCard.css
@@ -10,13 +10,13 @@
 }
 
 .card > .img-container {
-  height: 60%;
+  height: 100%;
   overflow: hidden;
   text-align: center;
-  background:#6CADDC;
+  background:white;
 }
 .card > .img-container > img {
-  width: 60%
+  width: 80%
 }
 
 .card > .content {
@@ -33,15 +33,6 @@
   margin-top: 18px;
 }
 
-.card > .remove {
-  color: #ff1744;
-  font-size: 48px;
-  position: absolute;
-  top: -20px;
-  right: 5px;
-  cursor: pointer;
-}
 
-.card > .remove:hover {
-  color: #d50000;
-}
+
+
