--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -1,8 +1,10 @@
 .title {
   width: 100%;
+  height:200px;
   text-align: center;
   font-size: 3rem;
   text-decoration: underline;
   color: #2A77AE;
   margin-bottom: 50px;
+  padding: 100px;
 }
