--- a/src/components/FriendCard/FriendCard.css
+++ b/src/components/FriendCard/FriendCard.css
@@ -8,6 +8,16 @@
   box-shadow: 0 3px 6px #999, 0 3px 6px #999;
 }
 
+.card:hover {
+  background: #fff;
+  border-radius: 2px;
+  height: 375px;
+  margin: 1rem;
+  position: relative;
+  width: 375px;
+  box-shadow: 0 10px 10px black, 0 10px 10px black;
+}
+
 .card > .img-container {
   height: 100%;
   overflow: hidden;
