--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -2,7 +2,8 @@
     background-color: blue;
     border: solid 5px black;
     width: 100%;
-    height: 150px;
+    min-height: 150px;
+    max-height: auto;
     margin: 0;
     color: white;
 }
@@ -10,5 +11,12 @@
     text-align: center;
     margin: 20px 0 0 0;
     font-size: 50px;
+    font-weight: bolder;
+}
+
+.scoreboard{
+    text-align: center;
+    margin: 20px 0 0 0;
+    font-size: 40px;
     font-weight: bolder;
 }
