--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -1,10 +1,12 @@
 .title {
   width: 100%;
-  height:200px;
+  min-height:200px;
+  max-height: auto;
   text-align: center;
   font-size: 3rem;
   text-decoration: underline;
   color: #2A77AE;
   margin-bottom: 50px;
   padding: 100px;
+  background-image: url(../../image/clickybackground1.jpg)
 }
